# SWE-Squad

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITOPS.md  LICENSE  Makefile  ONBOARDING.md  README.md  SECURITY.md  crontab.example  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: agent-card.json  deployment-notes.md  swe_team.yaml  swe_team.yaml.example
config/grafana/: dashboard.json  datasource.yaml
config/projects/: example.yaml
config/swe_team/: roles.yaml
docker/dashboard/: Dockerfile  docker-compose.yml
docs/: architecture.md  configuration.md  contributing.md  index.md  modules.md  operational-monitoring.md  security.md
scripts/ops/: a2a_hub.py  a2a_request.py  dashboard_data.py  dashboard_server.py  onboard_repo.sh  pr_sync.py  self_heal.py  supabase_schema.sql  swe_cli.py  swe_team_runner.py  sync_public.sh
src/a2a/: client.py  dispatch.py  events.py  models.py  server.py
src/swe_team/: __init__.py  agent_rbac.py  agent_registry.py  batch_resolution.py  circuit_breaker.py  code_reviewer.py  config.py  control_plane.py  control_plane_api.py  creative_agent.py  credential_scanner.py  developer.py  distiller.py  embeddings.py  events.py  gemini_cli_adapter.py  github_integration.py  github_invites.py  github_multi_repo.py  github_scanner.py  governance.py  graph_scoring.py  guardrails.py  investigator.py  log_formatter.py  (+27 more)
templates/: dashboard.html
(+126 files in other folders)
